# dedicatedslave-archive

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  .travis.yml.old  .yml.old  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  ROADMAP.md  dub.json  env.cmd  env.sh  mkdocs.yml  model.qmodel  stateChart.scxml
assets/: envconfig.json
docs/: flowdiagram.graphml  index.md  qtmodel.qmodel  serverdiagram.graphml  uml.graphml
docs/about/: license.md  release-notes.md  support.md
docs/developer-guide/: contributing.md  development.md
docs/user-guide/: configuration.md  gettingstarted.md
include/DedicatedSlave/: Downloader.h  Extractor.h  Game.h  Global.h  HelperIO.h  ServerInstance.h  ServerManager.h
include/DedicatedSlave/data/: data.h  dbmanager.h
include/DedicatedSlave/logic/: app.h  appsteamapi.h  processmanager.h
include/dedicatedslave/: dedicatedslavelib.h  dedicatedslavelib_global.h
include/dedicatedslave/data/: data.h  dbmanager.h  models.h
include/dedicatedslave/logic/: app.h  appsteamapi.h  config.h  helperio.h  helpersys.h
rsrc/ui/: ui.qrc
src/: ServerManager.cpp  dedicatedslavelib.cpp
src/cli/: dub.json  main.cpp
src/cli/source/: app.d
src/data/: data.cpp  dbmanager.cpp  models.cpp
src/gui/: dub.json
src/gui/source/dedicatedslave/gui/: app.d  mainwindow.d  splash.d
src/logic/: app.cpp  appsteamapi.cpp  config.cpp  helperio.cpp  helpersys.cpp  processmanager.cpp
src/source/dedicatedslave/: loader.d
src/ui/: Application.cpp  MainWindow.cpp  MainWindow.h  configdialog.cpp  configdialog.h  configpages.cpp  configpages.h  main.cpp  mainwindow.cpp  mainwindow.h  ui.cpp  ui.h  uidock.cpp  uidock.h
src/ui/config/: configdialog.cpp  configdialog.h  configpages.cpp  configpages.h
